# gmmreg

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile  Dockerfile.builder  Dockerfile.tester  Makefile  README.md  gmmreg_bib.txt
.github/workflows/: ci.yml
C++/: CMakeLists.txt  Dockerfile.builder  Makefile  build.sh  extract_correspondence.cpp  fgt_utils.h  gmmreg.cd  gmmreg_api.cpp  gmmreg_api.h  gmmreg_aux.cpp  gmmreg_base.cpp  gmmreg_base.h  gmmreg_cpd.cpp  gmmreg_cpd.h  gmmreg_demo.cpp  gmmreg_downsample.cpp  gmmreg_factory.cpp  gmmreg_factory.h  gmmreg_grbf.cpp  gmmreg_grbf.h  gmmreg_grbf_func.cpp  gmmreg_grbf_func.h  gmmreg_mex.cpp  gmmreg_rigid.cpp  gmmreg_rigid.h  gmmreg_rigid_func.cpp  gmmreg_rigid_func.h  gmmreg_tps.cpp  gmmreg_tps.h  gmmreg_tps_func.cpp  gmmreg_tps_func.h  gmmreg_transform.cpp  gmmreg_utils.cpp  gmmreg_utils.h  pygmmreg.cpp  readme.txt  seq_rigid3d.cpp  setup.py  test_gauss_transform.cpp  test_kdtree.cpp
C++/not_used/: rotation_utils.cc
C++/testdata/: cmu_road_data.txt  face.ini  fish_full.ini  fish_full_test.ini  fish_partial.ini
C++/testdata/expected_output/face/: em_grbf.json  em_tps.json  grbf_kc.json  grbf_l2.json  tps_kc.json  tps_l2.json
C++/testdata/expected_output/fish_full/: em_grbf.json  em_tps.json  grbf_kc.json  grbf_l2.json  tps_kc.json  tps_l2.json
C++/testdata/expected_output/fish_partial/: em_grbf.json  em_tps.json  grbf_kc.json  grbf_l2.json  tps_kc.json  tps_l2.json
C++/testdata/face_data/: face_Y.txt  face_ctrl_pts.txt
C++/testdata/fish_data/: fish_X_nohead.txt  fish_Y.txt  fish_Y_notail.txt
C++/tests/: em_grbf_test.cc  em_tps_test.cc  fish_integration_helpers.h  gmmreg_rigid_func_test.cc  grbf_kc_test.cc  grbf_l2_test.cc  hello_gtest.cc  rigid_registration_test.cc  tps_kc_test.cc  tps_l2_test.cc
C++/utils/: CMakeLists.txt  downsample_utils.cc  downsample_utils.h  downsample_utils_test.cc  em_utils.cc  em_utils.h  em_utils_test.cc  fast_math.cpp  fast_math.h  fgt_utils.h  fgt_utils_test.cc  gauss_transform.cc  gauss_transform.h  gauss_transform_test.cc  io_utils.cc  io_utils.h  io_utils_test.cc  json_utils.cc  json_utils.h  json_utils_test.cc  macros.h  match_utils.cc  match_utils.h  match_utils_test.cc  misc_utils.cc  misc_utils_test.cc  normalization_utils.cc  normalization_utils.h  normalization_utils_test.cc  numerics.h  rbf_utils.cc  rbf_utils.h  rbf_utils_test.cc  rotation_utils_test.cc  transform_utils.cc  transform_utils.h  transform_utils_test.cc
MATLAB/: gmmreg_L2.m  gmmreg_demo.m  initialize_config.m  readme.txt
MATLAB/GaussTransform/: GaussTransform.c  GaussTransform.m  mex_GaussTransform.c
MATLAB/auxilliary/: DisplayPoints.m  DisplayPoints2D.m  DisplayPoints3D.m  determine_border.m  estimate_scale.m  ml_GetPrivateProfileString.m  set_bounds.m  set_ctrl_pts.m
MATLAB/registration/: compute_kernel.m  gmmreg_L2_costfunc.m  gmmreg_L2_tps_costfunc.m  quaternion2rotation.m  tps_compute_kernel.m  transform_by_affine2d.m  transform_by_affine3d.m  transform_by_rigid2d.m  transform_by_rigid3d.m  transform_by_tps.m  transform_pointset.m
Python/: __init__.py  _core.py  _demo.py  _plotting.py  readme.txt  setup.py
Python/c_extension/: CMakeLists.txt  DistanceMatrix.c  GaussTransform.c  cvgmi_API.h  memory_layout_note.h  py_extension.c
data/: face.ini  fish_full.ini
data/dragon_stand/: README  dragonStandRight.conf  dragonStandRight_0.ply  dragonStandRight_0.txt  dragonStandRight_120.ply  dragonStandRight_120.txt  dragonStandRight_144.ply  dragonStandRight_144.txt  dragonStandRight_168.ply  dragonStandRight_168.txt  dragonStandRight_192.ply  dragonStandRight_192.txt  dragonStandRight_216.ply  dragonStandRight_216.txt  dragonStandRight_24.ply  dragonStandRight_24.txt  dragonStandRight_240.ply  dragonStandRight_240.txt  dragonStandRight_264.ply  dragonStandRight_264.txt  dragonStandRight_288.ply  dragonStandRight_288.txt  dragonStandRight_312.ply  dragonStandRight_312.txt  dragonStandRight_336.ply  dragonStandRight_336.txt  dragonStandRight_48.ply  dragonStandRight_48.txt  dragonStandRight_72.ply  dragonStandRight_72.txt  dragonStandRight_96.ply  dragonStandRight_96.txt
data/face_data/: face_X.txt
data/fish_data/: fish_X.txt  fish_ctrl_pts.txt
data/lounge/: ReadMe.txt
data/output/: PLEASE_KEEP_THIS_FOLDER.txt
expts/: .gitignore  README.md  common_utils.py  dragon_expts.py  dragon_stand.ini  lounge.ini  lounge_expts.py  requirements.txt
expts/dragon/: prepare_data.py  run.sh  run_experiment.py
expts/dragon/prepared/gt_poses/: gt_pose_00.txt  gt_pose_01.txt  gt_pose_02.txt  gt_pose_03.txt  gt_pose_04.txt  gt_pose_05.txt  gt_pose_06.txt  gt_pose_07.txt  gt_pose_08.txt  gt_pose_09.txt  gt_pose_10.txt  gt_pose_11.txt  gt_pose_12.txt  gt_pose_13.txt  gt_pose_14.txt
expts/dragon/prepared/pclouds/: 0.txt  120.txt  144.txt  168.txt  192.txt  216.txt  24.txt  240.txt  264.txt  288.txt  312.txt  336.txt  48.txt  72.txt  96.txt
expts/dragon/results/: 0_vs_24.ini  0_vs_288.ini  0_vs_312.ini  0_vs_336.ini  0_vs_48.ini  0_vs_72.ini  120_vs_144.ini  120_vs_168.ini  120_vs_192.ini  120_vs_48.ini  120_vs_72.ini  120_vs_96.ini  144_vs_120.ini  144_vs_168.ini  144_vs_192.ini  144_vs_216.ini  144_vs_72.ini  144_vs_96.ini  168_vs_120.ini  168_vs_144.ini  168_vs_192.ini  168_vs_216.ini  168_vs_240.ini  168_vs_96.ini  192_vs_120.ini  192_vs_144.ini  192_vs_168.ini  192_vs_216.ini  192_vs_240.ini  192_vs_264.ini  216_vs_144.ini  216_vs_168.ini  216_vs_192.ini  216_vs_240.ini  216_vs_264.ini  216_vs_288.ini  240_vs_168.ini  240_vs_192.ini  240_vs_216.ini  240_vs_264.ini  (+50 more)
expts/dragon/results/0_vs_24/: elapsed_time_in_ms.txt  final_rigid.txt  final_rigid_matrix.txt
expts/dragon/results/0_vs_288/: elapsed_time_in_ms.txt  final_rigid.txt  final_rigid_matrix.txt  transformed_model.txt
expts/dragon/results/0_vs_312/: elapsed_time_in_ms.txt  final_rigid_matrix.txt
expts/dragon/results/0_vs_336/: elapsed_time_in_ms.txt
expts/dragon/results/0_vs_48/: elapsed_time_in_ms.txt  final_rigid_matrix.txt
expts/dragon/results/0_vs_72/: elapsed_time_in_ms.txt  final_rigid.txt  (+2 more)
expts/lounge/: prepare_data.py  run.sh
(+214 files in other folders)
